--- a/research/st_02.ipynb
+++ b/research/st_02.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,9 +34,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'read_yaml' from 'deepClassifier.utils' (C:\\Users\\rosli\\A_DATA SCIENCE_FSDS\\DEEP LEARNING\\SUNNY_CHANDRA_CLASS\\DEEPCNNCLASSIFIER\\src\\deepClassifier\\utils\\__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdeepClassifier\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconstants\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mdeepClassifier\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m read_yaml, create_directories\n",
+      "\u001b[1;31mImportError\u001b[0m: cannot import name 'read_yaml' from 'deepClassifier.utils' (C:\\Users\\rosli\\A_DATA SCIENCE_FSDS\\DEEP LEARNING\\SUNNY_CHANDRA_CLASS\\DEEPCNNCLASSIFIER\\src\\deepClassifier\\utils\\__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "from deepClassifier.constants import *\n",
     "from deepClassifier.utils import read_yaml, create_directories"
@@ -208,10 +220,29 @@
   }
  ],
  "metadata": {
-  "language_info": {
-   "name": "python"
+  "kernelspec": {
+   "display_name": "Python 3.8.0 (conda)",
+   "language": "python",
+   "name": "python3"
   },
-  "orig_nbformat": 4
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.0"
+  },
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "b3d54ce8065664b0e4fb82935c134e6a063038c1389c47f5400aa7656c337ad4"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
